--- a/cnbook/index.html
+++ b/cnbook/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
  
-<button onclick="#">v0.0.1</button>
+<button onclick="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.2</button>
 <button onclick="myFunction(1)">+</button>
 <button onclick="myFunction(-1)">-</button>
 <br><br>
@@ -32,6 +32,7 @@ function myFunction(nAdd) {
 		var d = document.getElementById("dbg");
         d.innerHTML = src;
     	i.src = src;
+	i.style.width = "100%";
     }
     else
     {
