--- a/cnbook/index.html
+++ b/cnbook/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
  
-<button onclick="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.3</button>
+<a href="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.4</a>-
 <button onclick="myFunction(1)">+</button>
 <button onclick="myFunction(-1)">-</button>	
 <button onclick="myFunction(10)">+10</button>
