--- a/cnbook/index.html
+++ b/cnbook/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
  
-<a href="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.4</a>-
+<a href="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.5</a>-
 <button onclick="myFunction(1)">+</button>
 <button onclick="myFunction(-1)">-</button>	
 <button onclick="myFunction(10)">+10</button>
@@ -54,6 +54,13 @@ function myFunction(nAdd) {
     }
 }
 </script>
-
+<button onclick="myFunction(1)">+</button>
+<button onclick="myFunction(-1)">-</button>	
+<button onclick="myFunction(10)">+10</button>
+<button onclick="myFunction(-10)">-10</button>
+<button onclick="myFunction(50)">+50</button>
+<button onclick="myFunction(-50)">-50</button>
+<button onclick="myFunction(100)">+100</button>
+<button onclick="myFunction(-100)">-100</button>
 </body>
 </html>
