--- a/cnbook/index.html
+++ b/cnbook/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
  
-<a href="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.5</a>-
+<a href="https://github.com/littleflute/pro-javascript-design-patterns/edit/master/cnbook/index.html">v0.0.6</a>-
+	<a target="_blank" href="https://github.com/littleflute/blog/issues/302">issue</a>
 <button onclick="myFunction(1)">+</button>
 <button onclick="myFunction(-1)">-</button>	
 <button onclick="myFunction(10)">+10</button>
